Grid Job decorator uses random icon :-)